# eflostop_wifihub_idf1

./: .gitignore  APP_SCOPE.md  C2D_COMMANDS.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
.claude/: settings.local.json
docs/app_team_qa/: LEAK_FLOW_AND_PROVISIONING.md  LEAK_OVERRIDE_VALVE_FLOW.md
docs/commission_snapshot/: FEATURE_TRACKER.md  TEST_PLAN.md
docs/network_led/: FEATURE_TRACKER.md  TEST_PLAN.md
docs/remote_override/: DECISIONS.md  FEATURE_TRACKER.md  FINDINGS.md  PLAN.md  TEST_PLAN.md  WATTS_DIGITAL_SPEC.md
docs/wifi_only_reset/: FEATURE_TRACKER.md  TEST_PLAN.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/app_lora/: app_lora.cpp  app_lora.h  drv1262.cpp  drv1262.h  lora.cpp  lora.h  lora_crypto.c  lora_crypto.h
main/app_uart/: app_uart.c  app_uart.h
main/app_wifi/: app_wifi.c  app_wifi.h
main/ble_leak_scanner/: app_ble_leak.c  app_ble_leak.h
main/ble_valve/: app_ble_valve.c  app_ble_valve.h
main/commands/: c2d_commands.c  c2d_commands.h
main/dps_client/: dps_client.c  dps_client.h
main/health_engine/: health_engine.c  health_engine.h
main/hub_identity/: hub_identity.c  hub_identity.h
main/iothub/: app_iothub.c  app_iothub.h
main/net_status/: net_status.c  net_status.h
main/nvs_store/: nvs_store.c  nvs_store.h
main/offline_buffer/: offline_buffer.c  offline_buffer.h
main/provisioning_manager/: provisioning_manager.c  provisioning_manager.h
main/rgb/: rgb.c  rgb.h
main/rules_engine/: rules_engine.c  rules_engine.h
main/sensor_meta/: sensor_meta.c  sensor_meta.h
main/systemservices/: monitoring.c  monitoring.h
main/telemetry/: telemetry_v2.c  telemetry_v2.h
main/wifi_reset/: reset_button.c  reset_button.h
