idf_component_register(SRCS "main.c"
                            "app_uart/app_uart.c"
                            "rgb/rgb.c"
                            "app_wifi/app_wifi.c"
                            "iothub/app_iothub.c"
                            "app_lora/app_lora.cpp"
                            "app_lora/lora.cpp"
                            "app_lora/drv1262.cpp"
                            "systemservices/monitoring.c"
                    INCLUDE_DIRS "."
                                 "app_uart"
                                 "rgb"
                                 "app_wifi"
                                 "iothub"
                                 "app_lora"
                                 "systemservices"
                                 )
