idf_component_register(SRCS "main.c"
                            "app_uart/app_uart.c"
                            "rgb/rgb.c"
                            "app_wifi/app_wifi.c"
                            "ble_valve/app_ble_valve.c"
                            "iothub/app_iothub.c"
                            "provisioning_manager/provisioning_manager.c"
                            "app_lora/app_lora.cpp"
                            "app_lora/lora.cpp"
                            "app_lora/drv1262.cpp"
                            "app_lora/lora_crypto.c"
                            "systemservices/monitoring.c"
                            "ble_leak_scanner/app_ble_leak.c"
                            "rules_engine/rules_engine.c"
                            "sensor_meta/sensor_meta.c"
                            "telemetry/telemetry_v2.c"
                            "commands/c2d_commands.c"
                    INCLUDE_DIRS "."
                                 "app_uart"
                                 "rgb"
                                 "app_wifi"
                                 "ble_valve"
                                 "iothub"
                                 "provisioning_manager"
                                 "app_lora"
                                 "systemservices"
                                 "ble_leak_scanner"
                                 "rules_engine"
                                 "sensor_meta"
                                 "telemetry"
                                 "commands"
                                 )